--- a/styles/style.css
+++ b/styles/style.css
@@ -1,3 +1,18 @@
+body {
+  color: #fff;
+  background-color: #191919ff;
+  width: 300px;
+}
+
+.logo {
+  display: flex;
+  justify-content: center;
+}
+
+.text-center {
+  text-align: center;
+}
+
 .warning {
   margin: 5px;
   cursor: default;
